--- a/FrontEnd/html/historialReservas.html
+++ b/FrontEnd/html/historialReservas.html
@@ -15,7 +15,8 @@
       <li><a href="crearReservas.html">Crear Reserva</a></li>
       <li><a href="historialReservas.html">Historial</a></li>
       <li><a href="reportes.html">Reportes</a></li>
-      <li><a href="#">Catálogo</a></li>
+      <li><a href="catalogoTiposVehiculo.html">Catálogo</a></li>
+      <li><a href="misVehiculos.html">Mis Vehículos</a></li>
     </ul>
   </aside>
 
