--- a/FrontEnd/html/reportes.html
+++ b/FrontEnd/html/reportes.html
@@ -9,12 +9,12 @@
 
 <aside class="sidebar">
   <ul>
-    <li><a href="agenda.html">Mi Agenda</a></li>
-    <li><a href="reservasPendientes.html">Reservas Pendientes</a></li>
-    <li><a href="crearReservas.html">Crear Reserva</a></li>
-    <li><a href="historialReservas.html">Historial</a></li>
-    <li><a href="reportes.html">Reportes</a></li>
-    <li><a href="#">Catálogo</a></li>
+     <li><a href="agenda.html">Mi Agenda</a></li>
+      <li><a href="reservasPendientes.html">Reservas Pendientes</a></li>
+      <li><a href="crearReservas.html">Crear Reserva</a></li>
+      <li><a href="historialReservas.html">Historial</a></li>
+      <li><a href="reportes.html">Reportes</a></li>
+      <li><a href="misVehiculos.html">Mis Vehículos</a></li>
   </ul>
 </aside>
 
