--- a/FrontEnd/html/agenda.html
+++ b/FrontEnd/html/agenda.html
@@ -34,35 +34,22 @@
           <tr>
             <th>N° Reserva</th>
             <th>Cliente</th>
-            <th>DNI / CIF</th>
-            <th>Teléfono</th>
-            <th>Matrícula</th>
-            <th>Fecha de entrega</th>
-            <th>Hora de entrega</th>
-            <th>Fecha de recogida</th>
-            <th>Hora de recogida</th>
+            <th>Espacio</th>
+            <th>Placa</th>
+            <th>Fecha de reserva</th>
             <th>Pago</th>
-            <th>Acción</th>
-            <th>Reserva / Fact.</th>
+  
           </tr>
         </thead>
         <tbody>
           <tr>
             <td>R-001</td>
             <td>Jose</td>
-            <td>33344</td>
-            <td>4545</td>
-            <td>m</td>
+            <td>2</td>
+            <td>MK1241</td>
             <td>16/01/2024</td>
-            <td>06:15:00</td>
-            <td>26/01/2024</td>
-            <td>05:45</td>
-            <td>47.00 €</td>
+            <td>3000</td>
             <td><button class="btn-historial">Enviar a Historial</button></td>
-            <td>
-              <button class="btn-pdf">PDF</button>
-              <button class="btn-csv">CSV</button>
-            </td>
           </tr>
         </tbody>
       </table>
@@ -77,6 +64,6 @@
     </section>
   </main>
 
-</body>
+  </body>
 </html>
 
