--- a/FrontEnd/html/crearReservas.html
+++ b/FrontEnd/html/crearReservas.html
@@ -30,19 +30,15 @@
       <h2 class="titulo">Crear Nueva Reserva</h2>
 
       <form class="form-reserva" id="formReserva">
-        <div class="form-group">
-          <label for="cliente">ID Usuario</label>
-          <input type="number" id="cliente" name="cliente" placeholder="ID del usuario" required />
-        </div>
 
         <div class="form-group">
           <label for="espacio">Número de Espacio</label>
-          <input type="number" id="espacio" name="espacio" placeholder="Ej: 3" required />
+          <input type="number" id="espacio" name="espacio" placeholder="Ej: 3" min="1" required />
         </div>
 
         <div class="form-group">
           <label for="monto">Monto Total</label>
-          <input type="number" id="monto" name="monto" placeholder="Ej: 2500" required />
+          <input type="number" id="monto" name="monto"  readonly value="3500"/>
         </div>
 
         <button type="submit" class="btn-guardar">Guardar Reserva</button>
