--- a/FrontEnd/html/crearReservas.html
+++ b/FrontEnd/html/crearReservas.html
@@ -32,13 +32,13 @@
       <form class="form-reserva" id="formReserva">
 
         <div class="form-group">
-          <label for="espacio">Número de Espacio</label>
-          <input type="number" id="espacio" name="espacio" placeholder="Ej: 3" min="1" required />
+          <label for="idUsuario">ID de Usuario</label>
+          <input type="number" id="idUsuario" name="idUsuario" placeholder="Ej: 1" min="1" required />
         </div>
 
         <div class="form-group">
-          <label for="monto">Monto Total</label>
-          <input type="number" id="monto" name="monto"  readonly value="3500"/>
+          <label for="idEspacio">Número de Espacio</label>
+          <input type="number" id="idEspacio" name="idEspacio" placeholder="Ej: 3" min="1" required />
         </div>
 
         <button type="submit" class="btn-guardar">Guardar Reserva</button>
@@ -46,7 +46,7 @@
     </section>
   </main>
 
-  <script src="../js/crearReserva.js"></script>
+  <script src="../js/reserva.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
