--- a/FrontEnd/html/historialReservas.html
+++ b/FrontEnd/html/historialReservas.html
@@ -15,7 +15,6 @@
       <li><a href="crearReservas.html">Crear Reserva</a></li>
       <li><a href="historialReservas.html">Historial</a></li>
       <li><a href="reportes.html">Reportes</a></li>
-      <li><a href="catalogoTiposVehiculo.html">Catálogo</a></li>
       <li><a href="misVehiculos.html">Mis Vehículos</a></li>
     </ul>
   </aside>
@@ -24,7 +23,6 @@
   <main class="main-content">
     <header class="navbar">
       <span class="logo"><img src="../img/parqueoLogin.jpg" alt="Logo" /></span>
-      <span class="user-email">usuario@email.com</span>
     </header>
 
     <section class="agenda-container">
@@ -67,7 +65,13 @@
         </tbody>
       </table>
     </section>
+    <footer class="footer">
+      <p>&copy; 2025 Sistema de Parqueo. Todos los derechos reservados.</p>
+    </footer>
+  
+
   </main>
 
+  
 </body>
 </html>
