--- a/FrontEnd/html/agenda.html
+++ b/FrontEnd/html/agenda.html
@@ -62,6 +62,9 @@
 
       <p class="registro-info">Mostrando registros del 1 al 1 de un total de 1 registros</p>
     </section>
+    <footer class="footer">
+      <p>&copy; 2025 Sistema de Parqueo. Todos los derechos reservados.</p>
+    </footer>
   </main>
 
   </body>
