--- a/FrontEnd/html/misVehiculos.html
+++ b/FrontEnd/html/misVehiculos.html
@@ -29,7 +29,9 @@
     <section class="agenda-container">
       <h2 class="titulo">Vehículos Registrados</h2>
       <a href="registrarVehiculo.html" class="btn-naranja">Registrar Nuevo Vehículo</a>
-
+      <br>
+      <br>
+      <br>
       <table class="tabla-reservas">
         <thead>
           <tr>
@@ -39,17 +41,20 @@
             <th>Tipo</th>
             <th>Estado</th>
             <th>Acciones</th>
-            <th>Hoy</th>
           </tr>
         </thead>
         <tbody id="tablaVehiculos">
-          <!-- Vehículos se cargan dinámicamente -->
+          <!-- Vehículos se insertan desde JS -->
         </tbody>
       </table>
     </section>
+    <footer class="footer">
+      <p>&copy; 2025 Sistema de Parqueo. Todos los derechos reservados.</p>
+    </footer>
   </main>
 
-  <script> src="../js/misVehiculos.js" </script>
 
+  <!-- 🔗 Asegura que el script esté cargando -->
+  <script src="../js/misVehiculos.js"></script>
 </body>
 </html>
