--- a/FrontEnd/html/reservasPendientes.html
+++ b/FrontEnd/html/reservasPendientes.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Reservas Pendientes</title>
-  <link rel="stylesheet" href="../css/agenda.css">
+  <link rel="stylesheet" href="../css/agenda.css" />
 </head>
 <body>
 
   <!-- Sidebar -->
   <aside class="sidebar">
     <ul>
-       <li><a href="agenda.html">Mi Agenda</a></li>
+      <li><a href="agenda.html">Mi Agenda</a></li>
       <li><a href="reservasPendientes.html">Reservas Pendientes</a></li>
       <li><a href="crearReservas.html">Crear Reserva</a></li>
       <li><a href="historialReservas.html">Historial</a></li>
@@ -37,20 +37,11 @@
             <th># Reserva</th>
             <th>Cliente</th>
             <th>Vehículo</th>
-            <th>Fecha</th>
-            <th>Acción</th>
+             <th>Accion</th>
           </tr>
         </thead>
-        <tbody>
-          <tr>
-            <td>R-001</td>
-            <td>María</td>
-            <td>ABC-123</td>
-            <td>2025-06-18</td>
-            <td>
-                <button class="btn-historial" onclick="abrirModal('R-001', 47000)">Confirmar</button>
-            </td>
-          </tr>
+        <tbody id="tablaReservasBody">
+          <!-- Las filas se llenarán dinámicamente con JS -->
         </tbody>
       </table>
 
@@ -62,33 +53,43 @@
 
       <p class="registro-info">Mostrando registros del 1 al 1 de un total de 1 registros</p>
     </section>
+    <footer class="footer">
+      <p>&copy; 2025 Sistema de Parqueo. Todos los derechos reservados.</p>
+    </footer>
+
   </main>
+
+  <!-- Modal de Pago -->
   <div id="modalPago" class="modal">
-  <div class="modal-contenido">
-    <span class="cerrar" onclick="cerrarModal()">&times;</span>
-    <h3>Realizar Pago</h3>
+    <div class="modal-contenido">
+      <span class="cerrar" onclick="cerrarModal()">&times;</span>
+      <h3>Realizar Pago</h3>
 
-    <form action="../Controllers/pagoController.php" method="POST">
-      <input type="hidden" name="idReserva" id="idReserva">
+      <form id="formPago">
+        <input type="hidden" name="idReserva" id="idReserva" />
 
-      <div class="form-group">
-        <label for="metodo">Método de Pago</label>
-        <select name="metodo" id="metodo" required>
-          <option value="">Seleccione</option>
-          <option value="1">Tarjeta</option>
-          <option value="2">Efectivo</option>
-          <option value="3">Transferencia</option>
-        </select>
-      </div>
+        <div class="form-group">
+          <label for="metodo">Método de Pago</label>
+          <select name="metodo" id="metodo" required>
+            <option value="">Seleccione</option>
+            <option value="1">Tarjeta</option>
+            <option value="2">Efectivo</option>
+            <option value="3">Transferencia</option>
+          </select>
+        </div>
 
-      <div class="form-group">
-        <label for="monto">Monto</label>
-        <input type="number" name="monto" id="monto" placeholder="₡" required>
-      </div>
+        <div class="form-group">
+          <label for="monto">Monto</label>
+          <input type="number" name="monto" id="monto" placeholder="₡" readonly />
+        </div>
 
-      <button type="submit" class="btn-historial">Pagar</button>
-    </form>
+        <button type="submit" id="btnPagar" class="btn-historial">Pagar</button>
+      </form>
+    </div>
   </div>
-</div>
+  
+  <!-- Scripts -->
+  <script src="../js/modalPago.js"></script>
+  <script src="../js/reservasPendientes.js"></script>
 </body>
 </html>
