Mas cambios, gg

--- a/FrontEnd/html/agenda.html
+++ b/FrontEnd/html/agenda.html
@@ -34,21 +34,15 @@
           <tr>
             <th>N° Reserva</th>
             <th>Cliente</th>
-            <th>Espacio</th>
-            <th>Placa</th>                       
             <th>Pago</th>
+            <th>Vehiculo</th>                       
+
           </tr>
         </thead>
         <tbody id="tablaReservasActivasBody">
           <!-- Reservas activas se insertarán desde reservasActivas.js -->
         </tbody>
       </table>
-
-      <div class="paginacion">
-        <button disabled>Anterior</button>
-        <span class="pagina-actual">1</span>
-        <button>Siguiente</button>
-      </div>
 
       <p class="registro-info">Mostrando registros dinámicos</p>
     </section>
