--- a/FrontEnd/html/reportes.html
+++ b/FrontEnd/html/reportes.html
@@ -10,11 +10,11 @@
 <aside class="sidebar">
   <ul>
      <li><a href="agenda.html">Mi Agenda</a></li>
-      <li><a href="reservasPendientes.html">Reservas Pendientes</a></li>
-      <li><a href="crearReservas.html">Crear Reserva</a></li>
-      <li><a href="historialReservas.html">Historial</a></li>
-      <li><a href="reportes.html">Reportes</a></li>
-      <li><a href="misVehiculos.html">Mis Vehículos</a></li>
+     <li><a href="reservasPendientes.html">Reservas Pendientes</a></li>
+     <li><a href="crearReservas.html">Crear Reserva</a></li>
+     <li><a href="historialReservas.html">Historial</a></li>
+     <li><a href="reportes.html">Reportes</a></li>
+     <li><a href="misVehiculos.html">Mis Vehículos</a></li>
   </ul>
 </aside>
 
@@ -26,26 +26,16 @@
 
   <section class="agenda-container">
     <h2 class="titulo">Módulo de Reportes</h2>
-
-    <div style="display: flex; gap: 30px; flex-wrap: wrap;">
-      <div class="card-reporte">
-        <h3>Reporte De Vehículos Por Usuario</h3>
-        <p>Lista de vehículos registrados por cada usuario.</p>
-        <a href="reporteVehiculos.html" class="btn-orange">Ver Reporte</a>
-      </div>
-      <div class="card-reporte">
-        <h3>Historial De Reservas</h3>
-        <p>Visualiza todas las reservas realizadas.</p>
-        <a href="historialReservas.html" class="btn-orange">Ver Reporte</a>
-      </div>
-      <div class="card-reporte">
-        <h3>Facturación General</h3>
-        <p>Resumen de facturas emitidas por fecha.</p>
-        <a href="reporteFacturacion.html" class="btn-orange">Ver Reporte</a>
-      </div>
+    <h4>Tu usuario cuenta con estos resumenes</h4>
+    <div>
+      <p>Cantidad de vehículos: <span id="cantidadVehiculos">0</span></p>
+      <p>Cantidad de reservas: <span id="cantidadReservas">0</span></p>
     </div>
   </section>
 </main>
 
+<script src="../js/reportes.js"></script>
 </body>
 </html>
+
+
