--- a/FrontEnd/html/reportes.html
+++ b/FrontEnd/html/reportes.html
@@ -12,7 +12,6 @@
      <li><a href="agenda.html">Mi Agenda</a></li>
      <li><a href="reservasPendientes.html">Reservas Pendientes</a></li>
      <li><a href="crearReservas.html">Crear Reserva</a></li>
-     <li><a href="historialReservas.html">Historial</a></li>
      <li><a href="reportes.html">Reportes</a></li>
      <li><a href="misVehiculos.html">Mis Vehículos</a></li>
   </ul>
@@ -24,12 +23,19 @@
     <span class="user-email">usuario@email.com</span>
   </header>
 
-  <section class="agenda-container">
-    <h2 class="titulo">Módulo de Reportes</h2>
-    <h4>Tu usuario cuenta con estos resumenes</h4>
-    <div>
-      <p>Cantidad de vehículos: <span id="cantidadVehiculos">0</span></p>
-      <p>Cantidad de reservas: <span id="cantidadReservas">0</span></p>
+  <section class="agenda-container reportes-container">
+    <h2 class="reportes-titulo">Módulo de Reportes</h2>
+    <p class="reportes-subtitulo">Tu usuario cuenta con estos resúmenes:</p>
+
+    <div class="reportes-cards">
+      <div class="reportes-card">
+        <h3>Vehículos registrados</h3>
+        <p id="cantidadVehiculos">0</p>
+      </div>
+      <div class="reportes-card">
+        <h3>Reservas realizadas</h3>
+        <p id="cantidadReservas">0</p>
+      </div>
     </div>
   </section>
 </main>
