--- a/FrontEnd/html/agenda.html
+++ b/FrontEnd/html/agenda.html
@@ -22,7 +22,11 @@
   <main class="main-content">
     <header class="navbar">
       <span class="logo"><img src="../img/parqueoLogin.jpg" alt="Logo" width="30"></span>
-      <span class="user-email">usuario@email.com</span>
+     <div style="position:absolute; top:10px; right:20px; z-index:9999;">
+        <button id="logoutBtn" style="background:#ff4d4d;color:#fff;border:none;padding:6px 12px;border-radius:6px;cursor:pointer;">
+          Cerrar Sesión
+        </button>
+    </div>
     </header>
 
     <section class="agenda-container">
