--- a/FrontEnd/html/crearReservas.html
+++ b/FrontEnd/html/crearReservas.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="form-group">
-          <label for="idEspacio">Número de Espacio</label>
+          <label for="idEspacio">Número de Espacio (1-30)</label>
           <input type="number" id="idEspacio" name="idEspacio" placeholder="Ej: 3" min="1" required />
         </div>
 
